--- a/views/firstPage.html
+++ b/views/firstPage.html
@@ -2,20 +2,25 @@
 
 <head>
     <title>
-        수학 개시판
+        수학 개시판 -모든 수학 개시판
     </title>
-<style>
-    p{
-        color: black;
-        text-align: right;
-    }
-</style>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <style>
+        #signUp {
+            color: gray;
+            text-align: right;
+            font: 13px sans-serif;
+        }
+    </style>
 </head>
 
 <body>
-
-    <p>회원가입</p>
-
+    <div id="signUp">
+        <span>
+            <i class="far fa-user-circle"></i>
+            회원가입
+        </span>
+    </div>
 </body>
 
 </html>
