--- a/views/firstPage.html
+++ b/views/firstPage.html
@@ -6,21 +6,80 @@
     </title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <style>
-        #signUp {
-            color: gray;
+
+        header {
+
+            background-color: #666;
+            padding: 20px;
             text-align: right;
-            font: 13px sans-serif;
+
+        }
+
+        nav {
+            float: left;
+            width: 10%;
+            height: 800px;
+            background: #ccc;
+            padding: 20px;
+        }
+
+        /* Style the list inside the menu */
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+
+
+        /* Clear floats after the columns */
+        section:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+
+        /* Style the footer */
+        footer {
+            background-color: #777;
+            padding: 10px;
+            text-align: center;
+            color: black;
+        }
+
+        /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+        @media (max-width: 600px) {
+
+            nav,
+            article {
+                width: 100%;
+                height: auto;
+            }
         }
     </style>
 </head>
 
 <body>
-    <div id="signUp">
+    <header>
         <span>
             <i class="far fa-user-circle"></i>
+            <a href="#">
             회원가입
+            </a>
         </span>
-    </div>
+    </header>
+    <section>
+        <nav>
+            <ul>
+                <li><a href="#">게시판 이동</a></li>
+                <li><a href="#">나의 기록</a></li>
+
+            </ul>
+        </nav>
+    </section>
+
+    <footer>
+        <p>Footer</p>
+    </footer>
 </body>
 
 </html>
