--- a/views/firstPage.html
+++ b/views/firstPage.html
@@ -2,68 +2,21 @@
 
 <head>
     <title>
-        수학 개시판 -모든 수학 개시판
+        수학 개시판
     </title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <style>
 
-        header {
+    <link href="stylesheets/StyleSheetFirstPage.css" ,type="text/css",  rel="stylesheet">
 
-            background-color: #666;
-            padding: 20px;
-            text-align: right;
-
-        }
-
-        nav {
-            float: left;
-            width: 10%;
-            height: 800px;
-            background: #ccc;
-            padding: 20px;
-        }
-
-        /* Style the list inside the menu */
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-
-
-        /* Clear floats after the columns */
-        section:after {
-            content: "";
-            display: table;
-            clear: both;
-        }
-
-        /* Style the footer */
-        footer {
-            background-color: #777;
-            padding: 10px;
-            text-align: center;
-            color: black;
-        }
-
-        /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-        @media (max-width: 600px) {
-
-            nav,
-            article {
-                width: 100%;
-                height: auto;
-            }
-        }
-    </style>
 </head>
 
 <body>
+    <p id="heading">수학 게시판</p>
     <header>
         <span>
             <i class="far fa-user-circle"></i>
             <a href="#">
-            회원가입
+                회원가입
             </a>
         </span>
     </header>
