--- a/views/firstPage.html
+++ b/views/firstPage.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <p id="heading">수학 게시판</p>
+    <p id="heading">게시판</p>
     <header>
         <span>
             <i class="far fa-user-circle"></i>
