--- a/views/landingPage.html
+++ b/views/landingPage.html
@@ -1,13 +1,26 @@
 <html>
 
 <head>
-    <script>
+    <link href="stylesheets/StyleSheetLandingPage.css" ,type="text/css",  rel="stylesheet">
 
-    </script>
 </head>
 
 <body>
-
+<div id = "landingPageheading">
+    <table>
+        <th>numbers</th>
+        <tr>
+            <td>
+                1
+            </td>
+            <td>
+                2
+            </td>
+        
+        </tr>
+            
+    </table>
+</div>
 </body>
 
 </html>
