--- a/views/firstPage.html
+++ b/views/firstPage.html
@@ -6,17 +6,22 @@
     </title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
-    <link href="stylesheets/StyleSheetFirstPage.css" ,type="text/css",  rel="stylesheet">
-
+    <link href="stylesheets/StyleSheetFirstPage.css" ,type="text/css" , rel="stylesheet">
+    <script>
+        function signUp() {
+            alert("회원 가입");
+        }
+    </script>
 </head>
 
 <body>
     <p id="heading">게시판</p>
     <header>
-        <span>
-            <i class="far fa-user-circle"></i>
+        <span onclick="signUp()">
             <a href="#">
-                회원가입
+            <i class="far fa-user-circle"></i>
+
+            회원가입
             </a>
         </span>
     </header>
